# mkdcdisc-windows-binaries

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  meson.build
assets/: default-mr.mr
src/: main.cpp
src/disc_image/: cdi.c  disc_image.c  mds.c
